# solvefit

./: LICENSE  README.md  activities.toml  pyproject.toml
src/solvefit/: solvefit.py
src/solvefit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_solvefit.py
