[project]
name = "solvefit"
version = "0.1.0"
description = "CLI tool to optimise limited training time"
requires-python = ">=3.11"
dependencies = [
    "pulp>=2.7,<3.0",
    "toml>=0.10,<1.0",
    "numpy>=1.24,<2.0",
    "click>=8.1",
]

[project.scripts]
solvefit = "solvefit.solvefit:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"